--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-DATABASE_URL=postgresql://postgres:zvhYCvIcmPHcZOPEobEUZMpnIyRlwuUR@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:faIAPxDAnKyknVysSuDSwSmthcjMImNP@junction.proxy.rlwy.net:40816/railway
 DEBUG=1
 NODE_ENV=development
 PGHOST=postgres.railway.internal
 PGPORT=5432
 POSTGRES_DB=railway
-POSTGRES_PASSWORD=zvhYCvIcmPHcZOPEobEUZMpnIyRlwuUR
+POSTGRES_PASSWORD=faIAPxDAnKyknVysSuDSwSmthcjMImNP
 POSTGRES_USER=postgres
 POSTGRES_READY=1
