--- a/.env
+++ b/.env
@@ -1,9 +1,6 @@
-DATABASE_URL=postgresql://bnb_mountain_view_user:Yb1f49V0G2xqqUvnp0jh6PObgUwhTId2@dpg-cs8bq6tsvqrc73bnsgt0-a.oregon-postgres.render.com/bnb_mountain_view
-DEBUG=1
-NODE_ENV=development
-PGHOST=dpg-cs8bq6tsvqrc73bnsgt0-a
-PGPORT=5432
-POSTGRES_DB=bnb_mountain_view
-POSTGRES_PASSWORD=Yb1f49V0G2xqqUvnp0jh6PObgUwhTId2
-POSTGRES_USER=bnb_mountain_view_user
-POSTGRES_READY=1
+# Production db
+MYSQL_DB=bnb
+MYSQL_USER=bnbuser
+MYSQL_PASSWORD=S3cur3P@ssw0rd!
+MYSQL_HOST=vmi2421856.contaboserver.net
+MYSQL_PORT=3306
