--- a/.env
+++ b/.env
@@ -4,3 +4,10 @@ MYSQL_USER=bnbuser
 MYSQL_PASSWORD=S3cur3P@ssw0rd!
 MYSQL_HOST=vmi2421856.contaboserver.net
 MYSQL_PORT=3306
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=nexcoderwa@gmail.com
+EMAIL_HOST_PASSWORD=fbdcommddznrgtyy
+# DEFAULT_FROM_EMAIL=Your App <no-reply@yourapp.com>
